Fix spacing and font sizes.

--- a/src/App.scss
+++ b/src/App.scss
@@ -76,6 +76,6 @@ h1 {
 
 @media (max-width: 499px) {
   html {
-    font-size: 10pt;
+    font-size: 11pt;
   }
 }
