--- a/src/features/customRankings/AddPlayersList/AddPlayersList.scss
+++ b/src/features/customRankings/AddPlayersList/AddPlayersList.scss
@@ -10,6 +10,7 @@
         display: flex;
         flex-direction: row;
         padding: 0.6rem;
+        min-height: 30px;
         background-color: white;
         border-bottom: 1px solid var(--lightgrey);
     }
