--- a/src/features/welcome/WelcomePage.scss
+++ b/src/features/welcome/WelcomePage.scss
@@ -9,6 +9,8 @@
         color: white;
         display: flex;
         justify-content: center;
+        min-height: 60vh;
+        align-items: center;
 
         .hero-inner {
             padding: 5rem 2rem 5rem 2rem;
